fix checkbox label pos, fix docs playground collapse (#430)

--- a/xmlui/src/components/Theme/Theme.module.scss
+++ b/xmlui/src/components/Theme/Theme.module.scss
@@ -5,8 +5,6 @@
 }
 
 .baseRootComponent {
-  container-type: size;
-  container-name: app-container;
   width: 100%;
   position: relative;
   height: inherit;
